# quantum_simulation

./: .gitignore  1.m  diagonal_element.m
Code/: HA_1.m  HA_1_2.m  HA_2_3.m  HA_3.m  HA_3_7.m  HA_3_8.m  HA_4_10.m  HA_4_11.m  HA_6_17.m  HA_7_18.m  HA_7_19.m  Klausur_nr1.m  Klausur_nr2.m  Klausur_nr3.m  Todo.txt  Transistor_template.m  compute_modified_poisson_old.m  constants.py  current_landauer.m  energy_bands_comparison.m  fermi.m  helper.py  homework_6_17.m  homework_6_17_with_method.m  homework_7_18.m  initialise_constants.m  klausur_adapted_homework_7_19.m  lambda_double_gate.m  lambda_single_gate.m  lecture11.m  lecture9_current.m  parse_numeric_or_string.m  particle_in_a_box.m  poisson.m  pyproject.toml  region.py  selbstkonsistenz_test.m  strom_stunde9.m  stunde_2.m  stunde_2_strom.m  (+14 more)
Code/+helper/: check_figure_handle.m  derivative.m  derivative_von_neumann.m  fermi.m  integrate_vector.m  lambda_by_geometry.m  lambda_nanowire.m  m2_to_nm2.m  m3_to_nm3.m  n_lattice_points.m  nm_to_m.m  nth_level_particle_in_a_box.m  possible_length.m  second_derivative.m  second_derivative_von_neumann.m  subthreshold_slope.m  to_J.m  to_eV.m  to_m2.m  to_m3.m  to_nm.m
Code/+nanotube/: C.m  P.m  P_components.m  all_lattice_points_inside_and_around.m  all_lattice_points_inside_and_around_components.m  atoms_in_unit_cell.m  components2vec.m  components_vec2vec_vec.m  diameter.m  initialise_constants.m  is_inside_unit_cell.m  is_inside_unit_cell_components.asv  is_inside_unit_cell_components.m  is_inside_unit_cell_partial.m  is_inside_unit_cell_partial_components.m  is_metallic.m  (+7 more)
(+150 files in other folders)
