[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Emerentius <emerentius@arcor.de>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.22.2"
attrs = "^21.4.0"
matplotlib = "^3.5.1"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
